Bug 589431 - Crash when using profile manager [@ mozilla::imagelib::DiscardTracker::ReloadTimeout ], r=bholley, a=blocking